<resources>
    <string name="app_name">ProyectoGrupo6</string>
    <string name="bienvenida">¡Bienvenid@ a nuestra aplicación!</string>
    <string name="ahorcado">Ahorcado</string>
    <string name="x0">X 0</string>
    <string name="flappy">Flappy Bird</string>
    <string name="boton_de_ahorcado">BOTON DE AHORCADO</string>
    <string name="icono_aplicacion">ICONO APLICACION</string>
    <string name="boton_x0">boton x0</string>
    <string name="boton_flappy_bird">boton flappy bird</string>
    <string name="juegox0">Juego del X-O</string>
    <string name="tablerox0">tablerox0</string>
    <string name="btniniciax0">Iniciar Juego</string>
    <string name="btnsalirx0">Salir</string>
    <string name="jugador1">Jugador 1</string>
    <string name="jugador2">Jugador 2</string>
    <string name="imagen_jugador_2">imagen jugador 2</string>
    <string name="imagen_jugador_1">imagen jugador 1</string>
    <string name="btnIniciarJuegoX0">Iniciar Juego</string>
    <string name="btnReiniciarJuegoX0">Jugar de nuevo</string>
    <string name="_1_23">(1) : (23)</string>
    <string name="todo1">TODO1</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="todo4">TODO4</string>
</resources>