<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondo"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/icono_app"
        android:layout_width="193dp"
        android:layout_height="208dp"
        android:contentDescription="@string/icono_aplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319"
        app:srcCompat="@mipmap/icono" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:text="@string/bienvenida"
        android:textSize="20sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <ImageButton
        android:id="@+id/btn_flappy"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="83dp"
        android:layout_height="79dp"
        android:contentDescription="@string/boton_flappy_bird"
        android:onClick="boton_flapp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        app:srcCompat="@mipmap/flappybirdicono"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btn_X0"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="83dp"
        android:layout_height="79dp"
        android:contentDescription="@string/boton_x0"
        android:onClick="boton_x_0"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.759"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        app:srcCompat="@mipmap/x0icono"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btn_ahorcado"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="83dp"
        android:layout_height="79dp"
        android:contentDescription="@string/boton_de_ahorcado"
        android:onClick="boton_aho"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877"
        app:srcCompat="@mipmap/ahorcadoicono"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/lblFlappy"
        android:layout_width="102dp"
        android:layout_height="21dp"
        android:text="@string/flappy"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/lblx0"
        android:layout_width="102dp"
        android:layout_height="21dp"
        android:text="@string/x0"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lblahorcado"
        android:layout_width="102dp"
        android:layout_height="21dp"
        android:text="@string/ahorcado"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.916"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>