<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondojuegox0"
    tools:context=".JuegoX0">

    <ImageView
        android:id="@+id/imgj1"
        android:layout_width="70dp"
        android:layout_height="72dp"
        android:contentDescription="@string/imagen_jugador_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097"
        app:srcCompat="@mipmap/rostro1x0" />

    <TextView
        android:id="@+id/lbljugador1"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:text="@string/jugador1"
        android:textColor="#263238"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/lbljugador2"
        android:layout_width="102dp"
        android:layout_height="40dp"
        android:text="@string/jugador2"
        android:textAlignment="textEnd"
        android:textColor="#263238"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <ImageView
        android:id="@+id/imgj2"
        android:layout_width="64dp"
        android:layout_height="70dp"
        android:contentDescription="@string/imagen_jugador_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        app:srcCompat="@mipmap/rostro2x0" />

    <Button
        android:id="@+id/b1"
        android:layout_width="106dp"
        android:layout_height="110dp"
        android:background="@mipmap/fondojuegox0"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b4"
        android:layout_width="110dp"
        android:layout_height="107dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b7"
        android:layout_width="109dp"
        android:layout_height="110dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b6"
        android:layout_width="106dp"
        android:layout_height="101dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b3"
        android:layout_width="102dp"
        android:layout_height="120dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b9"
        android:layout_width="104dp"
        android:layout_height="111dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b5"
        android:layout_width="90dp"
        android:layout_height="103dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgTablero"
        android:layout_width="347dp"
        android:layout_height="499dp"
        android:contentDescription="@string/todo3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/tablerovaciox0" />

    <Button
        android:id="@+id/b2"
        android:layout_width="91dp"
        android:layout_height="114dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/b8"
        android:layout_width="94dp"
        android:layout_height="111dp"
        android:onClick="ponerFicha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textoVictoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

</androidx.constraintlayout.widget.ConstraintLayout>